--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "typescript": "5.0.4"
+    "react-multi-carousel": "^2.8.3",
+    "react-responsive-carousel": "^3.2.23",
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.34",
