--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.3",
+    "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
