--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.16",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "@next/font": "^13.3.0",
     "@types/node": "18.15.11",
     "@types/react-dom": "18.0.11",
