--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^18.0.34",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
