--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
+    "swiper": "^9.2.0",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
