--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "18.15.11",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
+    "firebase": "^9.21.0",
+    "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
