--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
-    "@types/node": "18.15.11",
+    "@types/marked": "^4.3.0",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "firebase": "^9.21.0",
@@ -26,14 +26,28 @@
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
     "swiper": "^9.2.0",
-    "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.34",
+    "@types/node": "^20.1.3",
+    "@types/react": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.8",
     "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "typescript": "^5.0.4"
   }
 }
