--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.21.0",
     "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
