--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
     "uuid": "^9.0.0"
   },
