--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
