--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@next/font": "^13.4.3",
     "@types/marked": "^4.3.0",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
