--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "firebase": "^9.21.0",
+    "mongodb": "^5.5.0",
     "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
     "nextjs-progressbar": "^0.0.16",
@@ -33,7 +34,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.1.3",
+    "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
