--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
+    "formik": "^2.4.0",
     "mongodb": "^5.5.0",
     "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
@@ -33,7 +34,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
