--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-multi-carousel": "^2.8.3",
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
