--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@next/font": "^13.4.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@types/marked": "^4.3.0",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
@@ -33,6 +35,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.2",
+    "stripe": "^12.8.0",
     "swiper": "^9.2.0",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
