--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.2",
+    "sharp": "^0.32.1",
     "stripe": "^12.8.0",
     "swiper": "^9.2.0",
     "uuid": "^9.0.0",
