--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^5.5.0",
     "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
