--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/marked": "^4.3.0",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.0",
     "firebase": "^9.21.0",
     "formik": "^2.4.0",
     "mongodb": "^5.5.0",
     "mui-tel-input": "^3.1.3",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
+    "next-cloudinary": "^4.12.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
