--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "dev:up": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "prod:up": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up"
+    "prod:up": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -43,6 +45,8 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -58,6 +62,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "tailwind-scrollbar": "^3.0.0",
